# CppProjectTemplate

./: .clang-format  .clang-tidy  .cmake-format.py  .cmake-format.yaml  .codecov.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeCache.txt  CMakeGuide.md  CMakeLists.txt  CMakeLists_8txt.html  CMakePreset.json  CMakeUserPresets.json  ConanInstall.md  Doxyfile  Doxyfile.in  FormatterAnalyzer.md  LICENSE  Makefile  README.md  README_cmake.md  README_install.md  README_tools.md  VCPKG_Install.md  _CMakePresets.json  _vcpkg.json  appveyor.yml  bar_2CMakeLists_8txt.html  bar_8cc.html  bar_8cc__incl.dot  bar_8h.html  bar_8h__dep__incl.dot  bar_8h_source.html  build.bat  build.sh  codecov.yml  (+35 more)
.github/workflows/: ci.yml  clang-format.yaml  codeql.yml  documentation.yaml  documentation.yml  macos.yml  pre-commit.yaml  pre-commit.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  main.c  main.cc  test.json
benchmarks/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake  CPM.cmake  Ccache.cmake  CodeCoverage.cmake  ConfigSafeGuards.cmake  Docs.cmake  Documentation.cmake  LTO.cmake  Sanitizer.cmake  StaticAnalyzer.cmake  StaticAnalyzers.cmake  Tools.cmake  Warnings.cmake
cmake/toolchains/: arm32-cross-toolchain.cmake  arm32-native-toolchain.cmake  x86-64-mingw-toolchain.cmake  x86-64-native-toolchain.cmake
configured/: CMakeLists.txt  config.hpp.in
docs/: Doxyfile  Doxyfile.in
documentation/: Doxyfile.in
include/: ProjectConfig.h.in  dummy.h  my_lib.h
include/MyLib/: my_lib.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
src/: CMakeLists.txt  dummy.c  dummy.cc  my_lib.cc
src/MyLib/: CMakeLists.txt  my_lib.cc
src/bar/: CMakeLists.txt  bar.cc  bar.h
src/foo/: CMakeLists.txt  foo.cc
src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.h
tests/: CMakeLists.txt  main.c  main.cc  test_bar.cc  test_dummy.c  test_dummy.cc  test_foo.cc
tools/: iwyu_tool.py  run-clang-format.py  run-clang-tidy.py
