if(USE_BENCHMARKS)
    set(BENCHMARK_SOURCES   "main.cc")
    set(BENCHMARK_MAIN      "${PROJECT}_benchmarks")

    if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
        set(BENCHMARK_FLAGS "/Ox")
    elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
        set(BENCHMARK_FLAGS "-O2")
    else()
        set(BENCHMARK_FLAGS "")
    endif()

    add_executable(${BENCHMARK_MAIN} ${BENCHMARK_SOURCES})
    target_compile_options(${BENCHMARK_MAIN} PUBLIC ${BENCHMARK_FLAGS})
    target_compile_features(${BENCHMARK_MAIN} PUBLIC cxx_std_17)
    target_link_libraries(${BENCHMARK_MAIN} PUBLIC ${LIBRARY_NAME})
    target_link_libraries(${BENCHMARK_MAIN} PUBLIC ${LIBRARY_BENCH})
    target_set_warnings(TARGET ${MAIN} ENABLE OFF AS_ERROR OFF)
endif()